--- a/gis-c/Makefile
+++ b/gis-c/Makefile
@@ -1,4 +1,4 @@
 all:
-	gcc gis.c -I/usr/local/include/igraph -ligraph -o gis
+	gcc gis.c -O2 -I/usr/local/include/igraph -ligraph -o gis
 clean:
 	rm -f gis
